# sparql-transactional-test

./: .gitignore  Cargo.toml  README.md  generate_operations.py  generate_update_operations.sh
example_workload_swdf/worker_0/: op_0.json  op_1.json  op_10.json  op_11.json  op_12.json  op_13.json  op_14.json  op_15.json  op_16.json  op_17.json  op_18.json  op_19.json  op_2.json  op_3.json  op_4.json  op_5.json  op_6.json  op_7.json  op_8.json  op_9.json
example_workload_swdf/worker_1/: op_0.json  op_1.json  op_10.json  op_11.json  op_12.json  op_13.json  op_14.json  op_15.json  op_16.json  op_17.json  op_18.json  op_19.json  op_2.json  op_3.json  op_4.json  op_5.json  op_6.json  op_7.json  op_8.json  op_9.json
example_workload_swdf/worker_2/: op_0.json  op_1.json  op_10.json  op_11.json  op_12.json  op_13.json  op_14.json  op_15.json  op_16.json  op_17.json  op_18.json  op_19.json  op_2.json  op_3.json  op_4.json  op_5.json  op_6.json  op_7.json  op_8.json  op_9.json
example_workload_swdf/worker_3/: op_0.json  op_1.json  op_10.json  op_11.json  op_12.json  op_13.json  op_14.json  op_15.json  op_16.json  op_17.json  op_18.json  op_19.json  op_2.json  op_3.json  op_4.json  op_5.json  op_6.json  op_7.json  op_8.json  op_9.json
examples/: kill.sh  restart.sh  start.sh
rdf_large/worker_1/: op_1.nt  op_1.ru  op_1.txt  op_10.nt  op_10.ru  op_10.txt  op_100.nt  op_100.ru  op_100.txt  op_101.nt  op_101.ru  op_102.nt  op_102.ru  op_102.txt  op_103.nt  op_103.ru  op_104.nt  op_104.ru  op_104.txt  op_105.nt  op_105.ru  op_105.txt  op_106.nt  op_106.ru  op_106.txt  op_107.nt  op_107.ru  op_107.txt  op_108.nt  op_108.ru  op_109.nt  op_109.ru  op_11.nt  op_11.ru  op_110.nt  op_110.ru  op_110.txt  op_111.nt  op_111.ru  op_112.nt  (+695 more)
rdf_large/worker_2/: op_1.nt  op_1.ru  op_1.txt  op_10.nt  op_10.ru  op_10.txt  op_100.nt  op_100.ru  op_100.txt  op_101.nt  op_101.ru  op_101.txt  op_102.nt  op_102.ru  op_102.txt  op_103.nt  op_103.ru  op_103.txt  (+828 more)
src/: error.rs  kill_worker.rs  main.rs  random_read_worker.rs  update_worker.rs
(+2730 files in other folders)
