[package]
name = "sparql-transactional-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "process"] }
clap = { version = "4.5.2", features = ["derive", "string"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prettydiff = { version = "0.6.4", default-features = false }
rand = "0.8.5"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
