[package]
name = "sparql-transactional-test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "process"] }
clap = { version = "4.5.40", features = ["derive", "string"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prettydiff = { version = "0.8.0", default-features = false }
rand = "0.9.1"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
